--- a/tokyo3.html
+++ b/tokyo3.html
@@ -45,7 +45,8 @@
             <ul class="clearfix">
             <li>
             <img src="img101.jpeg" alt="TOKYO">
-            <span>오사카에서의 첫 사진</span>
+            <p>📍Tanuki Appetizing</p>
+            <span>진짜 최고의 베이글집</span>
             </li>
             </ul>
         </div>
@@ -53,7 +54,7 @@
             <ul class="clearfix">
              <li>
              <img src="img102.jpeg" alt="TOKYO">
-             <span> </span>
+             <span>오픈하고 몇시간만에 품절되기 때문에 오픈 전에 도착해야한다^^</span>
              </li>
             </ul>
         </div>
@@ -61,7 +62,7 @@
             <ul class="clearfix">
             <li>
             <img src="img103.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>어디서 왔냐고, 한국에서 왔다하니 멀리서 와줘서 감사하다 하신</span>
             </li>
             </ul>
         </div>
@@ -69,8 +70,7 @@
             <ul class="clearfix">
              <li>
              <img src="img104.jpeg" alt="TOKYO">
-             <p>📍Kansai International Airport</p>
-             <span>공항 열차타고 라피트 타러 가는 길이다. </span>
+             <span>천사 사장님..</span>
              </li>
             </ul>
         </div>
@@ -86,7 +86,7 @@
             <ul class="clearfix">
             <li>
             <img src="img106.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>인증샷~</span>
             </li>
             </ul>
         </div>
@@ -94,7 +94,7 @@
             <ul class="clearfix">
             <li>
             <img src="img107.jpeg" alt="TOKYO">
-            <span>공항 내 편의점에서 갑자기 모찌를 사먹고는.</span>
+            <span>기본 베이글 2종류랑 샌드위치 4개 구매</span>
             </li>
             </ul>
         </div>
@@ -102,7 +102,7 @@
             <ul class="clearfix">
             <li>
             <img src="img108.jpeg" alt="TOKYO">
-            <span>기념품이 스퀴즈라니! 카와이이</span>
+            <span>베이글은 작은 편 하지만 맛은 강한 편..</span>
             </li>
             </ul>
         </div>
@@ -110,7 +110,7 @@
             <ul class="clearfix">
             <li>
             <img src="img109.jpeg" alt="TOKYO">
-            <span>난바역으로 가는 라피트 정류장 도착</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -118,7 +118,7 @@
             <ul class="clearfix">
             <li>
             <img src="img110.jpeg" alt="TOKYO">
-            <span>그리고 편의점 3대장 간식</span>
+            <span>이 날 날씨가 화창해서 기분도 너무 좋았다. 좀있다 올 비극을 모른채로..</span>
             </li>
             </ul>
         </div>
@@ -134,7 +134,8 @@
             <ul class="clearfix">
             <li>
             <img src="img112.jpeg" alt="TOKYO">
-            <span> </span>
+            <p>📍TSukiji market</p>
+            <span>지금은 없어진것같은 쓰키지 시장 지나기</span>
             </li>
             </ul>
         </div>
@@ -142,7 +143,7 @@
             <ul class="clearfix">
             <li>
             <img src="img113.jpeg" alt="TOKYO">
-            <span>조금 기다려 드디어 탄 라피트, 줄줄이 나있는 동그란 창문들은 놓칠 수 없어 </span>
+            <span>초밥못먹는 우리에겐 먹기 힘들었던 초밥 ㅎ</span>
             </li>
             </ul>
         </div>
@@ -150,7 +151,7 @@
             <ul class="clearfix">
             <li>
             <img src="img114.jpeg" alt="TOKYO">
-            <span>여름 중에서도 가장 여름 날씨다.</span>
+            <span>만보걷기 하다보니 도착한 긴자역</span>
             </li>
             </ul>
         </div>
@@ -158,7 +159,8 @@
             <ul class="clearfix">
             <li>
             <img src="img115.jpeg" alt="TOKYO">
-            <span>미니 레시또- 는 모으지 않고 못배긴다.</span>
+            <p>📍Ginza</p>
+            <span>긴자의 차 없는 거리란</span>
             </li>
             </ul>
         </div>
@@ -166,8 +168,7 @@
             <ul class="clearfix">
              <li>
              <img src="img116.jpeg" alt="TOKYO">
-             <p>📍Nanba Station</p>
-             <span>난바 도착. 이제 나간다!</span>
+             <span>도로에서 티타임을 즐기는 것</span>
              </li>
             </ul>
         </div>
@@ -175,7 +176,7 @@
             <ul class="clearfix">
             <li>
             <img src="img117.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>솜이 닮은 꼴의 말티즈</span>
             </li>
             </ul>
         </div>
@@ -183,7 +184,7 @@
             <ul class="clearfix">
             <li>
             <img src="img118.jpeg" alt="TOKYO">
-            <span>역사에 야채가게라니</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -191,7 +192,7 @@
             <ul class="clearfix">
             <li>
             <img src="img119.jpeg" alt="TOKYO">
-            <span> </span>
+            <span></span>
             </li>
             </ul>
         </div>
@@ -207,7 +208,8 @@
             <ul class="clearfix">
             <li>
             <img src="img121.jpeg" alt="TOKYO">
-            <span>편의점은 먹고싶은게 너무 많다</span>
+            <p>📍Tokyo Station</p>
+            <span>이번 여행의 마지막은 도쿄역에서</span>
             </li>
             </ul>
         </div>
@@ -215,7 +217,7 @@
             <ul class="clearfix">
             <li>
             <img src="img122.jpeg" alt="TOKYO">
-            <span>"눈 돌아간다"는 딱 이럴 때</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -223,7 +225,7 @@
             <ul class="clearfix">
             <li>
             <img src="img123.jpeg" alt="TOKYO">
-            <span>이맘 때 오사카는 무려 폭염이였지만</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -231,7 +233,7 @@
             <ul class="clearfix">
             <li>
             <img src="img124.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>백화점 구경하다 무지에서 스콘이랑 카르파쵸 겟</span>
             </li>
             </ul>
         </div>
@@ -239,7 +241,7 @@
             <ul class="clearfix">
             <li>
             <img src="img125.jpeg" alt="TOKYO">
-            <span>거리마다 끝없이 높던 하늘과</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -247,7 +249,7 @@
             <ul class="clearfix">
             <li>
             <img src="img126.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>날씨가 너무 좋았단 말이지</span>
             </li>
             </ul>
         </div>
@@ -255,7 +257,7 @@
             <ul class="clearfix">
             <li>
             <img src="img127.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>도쿄역에 있는 '캐릭터 스트리트'</span>
             </li>
             </ul>
         </div>
@@ -271,7 +273,7 @@
             <ul class="clearfix">
             <li>
             <img src="img130.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>신짱 오피셜숍.. 진짜 기절이야~</span>
             </li>
             </ul>
         </div>
@@ -287,7 +289,7 @@
             <ul class="clearfix">
             <li>
             <img src="img129.jpeg" alt="TOKYO">
-            <span> </span>
+            <span></span>
             </li>
             </ul>
         </div>
@@ -295,7 +297,7 @@
             <ul class="clearfix">
             <li>
             <img src="img132.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>행복하게 짱구 굿즈를 사고</span>
             </li>
             </ul>
         </div>
@@ -303,7 +305,7 @@
             <ul class="clearfix">
             <li>
             <img src="img133.jpeg" alt="TOKYO">
-            <span>쨍한 햇볕 풍경은 폭염을 잊게해. .</span>
+            <span>돌아가는 비행기를 놓쳤다.</span>
             </li>
             </ul>
         </div>
@@ -311,7 +313,7 @@
             <ul class="clearfix">
             <li>
             <img src="img134.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>짱구사는데 정신팔려 공항 가는 스카이라이너를 놓쳤기 때문이다^^</span>
             </li>
             </ul>
         </div>
@@ -319,7 +321,7 @@
             <ul class="clearfix">
             <li>
             <img src="img135.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>언니랑 캐리어 짊어매고 난투극 벌이다가</span>
             </li>
             </ul>
         </div>
@@ -327,7 +329,7 @@
             <ul class="clearfix">
             <li>
             <img src="img136.jpeg" alt="TOKYO">
-            <span> 라-멘</span>
+            <span>그냥 주변 호텔에서 1박 더하고 담날 비행기타기로 협상체결 ㅎㅎ</span>
             </li>
             </ul>
         </div>
@@ -335,7 +337,7 @@
             <ul class="clearfix">
             <li>
             <img src="img137.jpeg" alt="TOKYO">
-            <span> 낡은 건물과 신식 건물이 공존하지만 왠지 낡은 간판들에 더 눈이 간다</span>
+            <span>급히 잡은 호텔치고 꽤 좋아서 다시 즐거워진 우리</span>
             </li>
             </ul>
         </div>
@@ -343,8 +345,8 @@
             <ul class="clearfix">
              <li>
              <img src="img138.jpeg" alt="TOKYO">
-             <p>📍Sobayosi</p>
-             <span>첫 끼는 로컬, 관광객에 모두에게 맛집인 100년 전통 소바전문점. </span>
+             <span>요즘도 이 때 찍은 영상 볼 때마다 "야 이것도 추억이었다~"로 정신승리 중</span>
+             <span</span>
              </li>
             </ul>
         </div>
@@ -352,7 +354,7 @@
             <ul class="clearfix">
             <li>
             <img src="img139.jpeg" alt="TOKYO">
-            <span>장어덮밥도 유명하지만, 가장 맛있던건 저 새우덴뿌라다. 다음엔 꼭 튀김정식을 먹어야지</span>
+            <span>시간맞춰 인천공항까지 마중나왔던 엄빠에게도 암소쏴리^^ 생존신고용사진</span>
             </li>
             </ul>
         </div>
@@ -360,7 +362,7 @@
             <ul class="clearfix">
             <li>
             <img src="img140.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>겸사겸사 산거 풀어보기~</span>
             </li>
             </ul>
         </div>
@@ -368,7 +370,7 @@
             <ul class="clearfix">
             <li>
             <img src="img141.jpeg" alt="TOKYO">
-            <span>사자 머리의 야사카 신사.</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -376,7 +378,7 @@
             <ul class="clearfix">
             <li>
             <img src="img142.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>내 기준 레전드 3대장 포도물, 프리츠버터, 그리고 얘 '모찌뿌요'</span>
             </li>
             </ul>
         </div>
@@ -392,7 +394,7 @@
             <ul class="clearfix">
             <li>
             <img src="img144.jpeg" alt="TOKYO">
-            <span>거리에 서너개씩 꼭 있는 자판기가 무더위에는 진짜 오아시스가 따로 없다</span>
+            <span>다음은 굿즈들 등장해주세요</span>
             </li>
             </ul>
         </div>
@@ -400,7 +402,7 @@
             <ul class="clearfix">
             <li>
             <img src="img145.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>푸 덕후의 쇼핑</span>
             </li>
             </ul>
         </div>
@@ -416,7 +418,7 @@
             <ul class="clearfix">
             <li>
             <img src="img147.jpeg" alt="TOKYO">
-            <span> </span>
+            <span>한국 가서도 사이좋게 지내렴~</span>
             </li>
             </ul>
         </div>
@@ -424,7 +426,7 @@
             <ul class="clearfix">
             <li>
             <img src="img148.jpeg" alt="TOKYO">
-            <span>키미노 나마에와. . . 영화 그자체</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -440,7 +442,7 @@
             <ul class="clearfix">
             <li>
             <img src="img150.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span>이거 어디있더라</span>
             </li>
             </ul>
         </div>
@@ -448,7 +450,7 @@
             <ul class="clearfix">
             <li>
             <img src="img151.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span>다음날 호텔 셔틀타고 공항으로</span>
             </li>
             </ul>
         </div>
@@ -456,7 +458,7 @@
             <ul class="clearfix">
             <li>
             <img src="img152.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span>또 왤케 맛있었던 공항 아무개 식당</span>
             </li>
             </ul>
         </div>
@@ -464,7 +466,7 @@
             <ul class="clearfix">
             <li>
             <img src="img153.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -472,7 +474,7 @@
             <ul class="clearfix">
             <li>
             <img src="img154.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -480,7 +482,7 @@
             <ul class="clearfix">
             <li>
             <img src="img155.jpeg" alt="TOKYO">
-            <span>마리오 와루도-</span>
+            <span>양손 가득히 돌아온 도쿄, 안녕!</span>
             </li>
             </ul>
         </div>
