--- a/tokyo3.html
+++ b/tokyo3.html
@@ -54,7 +54,7 @@
             <ul class="clearfix">
              <li>
              <img src="img102.jpeg" alt="TOKYO">
-             <span>오픈하고 몇시간만에 품절되기 때문에 오픈 전에 도착해야한다^^</span>
+             <span>오픈하고 몇시간만에 품절되기 때문에 오픈 전에 도착해야된다</span>
              </li>
             </ul>
         </div>
@@ -70,7 +70,7 @@
             <ul class="clearfix">
              <li>
              <img src="img104.jpeg" alt="TOKYO">
-             <span>천사 사장님..</span>
+             <span>천사 사장님</span>
              </li>
             </ul>
         </div>
@@ -118,7 +118,7 @@
             <ul class="clearfix">
             <li>
             <img src="img110.jpeg" alt="TOKYO">
-            <span>이 날 날씨가 화창해서 기분도 너무 좋았다. 좀있다 올 비극을 모른채로..</span>
+            <span>이 날 날씨가 화창해서 기분도 너무 좋았다. 좀있다 올 비극 모른채로..</span>
             </li>
             </ul>
         </div>
@@ -313,7 +313,7 @@
             <ul class="clearfix">
             <li>
             <img src="img134.jpeg" alt="TOKYO">
-            <span>짱구사는데 정신팔려 공항 가는 스카이라이너를 놓쳤기 때문이다^^</span>
+            <span>짱구사는데 정신팔려 공항 가는 스카이라이너를 놓쳤기 때문이다^..^</span>
             </li>
             </ul>
         </div>
@@ -329,7 +329,7 @@
             <ul class="clearfix">
             <li>
             <img src="img136.jpeg" alt="TOKYO">
-            <span>그냥 주변 호텔에서 1박 더하고 담날 비행기타기로 협상체결 ㅎㅎ</span>
+            <span>그냥 주변 호텔에서 1박 더하고 담날 비행기타기로 협상</span>
             </li>
             </ul>
         </div>
@@ -337,7 +337,7 @@
             <ul class="clearfix">
             <li>
             <img src="img137.jpeg" alt="TOKYO">
-            <span>급히 잡은 호텔치고 꽤 좋아서 다시 즐거워진 우리</span>
+            <span> </span>
             </li>
             </ul>
         </div>
@@ -345,7 +345,7 @@
             <ul class="clearfix">
              <li>
              <img src="img138.jpeg" alt="TOKYO">
-             <span>요즘도 이 때 찍은 영상 볼 때마다 "야 이것도 추억이었다~"로 정신승리 중</span>
+             <span>요즘도 이 때 찍은 영상 볼 때마다 "야 이것도 추억이~"로 정신승리 중</span>
              <span</span>
              </li>
             </ul>
