--- a/tokyo3.html
+++ b/tokyo3.html
@@ -345,7 +345,7 @@
             <ul class="clearfix">
              <li>
              <img src="img138.jpeg" alt="TOKYO">
-             <span>요즘도 이 때 찍은 영상 볼 때마다 "야 이것도 추억이~"로 정신승리 중</span>
+             <span>요즘도 이 때 찍은 영상 볼 때마다 "야 이것도 추억이었다~"로 정신승리 중</span>
              <span</span>
              </li>
             </ul>
