--- a/tokyo3.html
+++ b/tokyo3.html
@@ -118,7 +118,7 @@
             <ul class="clearfix">
             <li>
             <img src="img110.jpeg" alt="TOKYO">
-            <span>이 날 날씨가 화창해서 기분도 너무 좋았다. 좀있다 올 비극 모른채로..</span>
+            <span>이 날 날씨가 화창해서 기분도 너무 좋았다. 좀있다 올 비극은 모른채로..</span>
             </li>
             </ul>
         </div>
@@ -134,8 +134,8 @@
             <ul class="clearfix">
             <li>
             <img src="img112.jpeg" alt="TOKYO">
-            <p>📍TSukiji market</p>
-            <span>지금은 없어진것같은 쓰키지 시장 지나기</span>
+            <p>📍Tsukiji market</p>
+            <span>지금은 없어진것같은 츠키지 시장 지나기</span>
             </li>
             </ul>
         </div>
