--- a/osaka2.html
+++ b/osaka2.html
@@ -46,7 +46,7 @@
              <li>
              <img src="img-53.jpeg" alt="Summer x2 Osaka">
                  <p>📍Rikuro Ojisang no Mise</p>
-             <span>. 리쿠로 오지상 케이크</span>
+             <span>사야만 한다. 리쿠로 오지상 케이크</span>
              </li>
             </ul>
         </div>
