--- a/tokyo.html
+++ b/tokyo.html
@@ -16,6 +16,14 @@
  <source src="https://docs.google.com/uc?export=open&id=12f4rtN1RSKGAgcqLRS_8EuGst-ODFdvy" type='audio/mp3' />
 </audio>
         
+    <section id="audio">
+        <div class="title">
+            <h1>Theme song : Yogee New Waves - Climax Night</h1>
+                <style type="text/css"> 
+                a img{border:none;}
+                </style>
+        </div>      
+        
     <section id="number">
         <div class="header">
             <h2>1</h2>
