--- a/tokyo.html
+++ b/tokyo.html
@@ -18,7 +18,7 @@
         
     <section id="audio">
         <div class="title">
-            <h1>Theme song : Yogee New Waves - Climax Night</h1>
+            <h1>Theme song : Yogee New Waves - Climax Night (*Please open in browser)</h1>
                 <style type="text/css"> 
                 a img{border:none;}
                 </style>
