--- a/tokyo.html
+++ b/tokyo.html
@@ -17,7 +17,7 @@
 </audio>
         
     <section id="audio">
-        <div class="title">
+        <div class="header">
             <h1>Theme song : Yogee New Waves - Climax Night (*Please open in browser)</h1>
                 <style type="text/css"> 
                 a img{border:none;}
