--- a/tokyo.html
+++ b/tokyo.html
@@ -18,7 +18,7 @@
     
     <div class="animated-title">
   <div class="track">
-    <div class="content">&nbsp;< (( Theme song : Yogee New Waves - Climax Night (*Please open in browser🤓🤳🏻)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser(੭ˊ꒳ˋ)🤳🏼)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser\(* ¨̮*)/\(*¨̮ *)/)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser)</div>
+    <div class="content">&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser🤓🤳🏻)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser(੭ˊ꒳ˋ)🤳🏼)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser\(* ¨̮*)/\(*¨̮ *)/)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser)&nbsp;Theme song : Yogee New Waves - Climax Night (*Please open in browser)</div>
   </div>
             
 </div>    
