--- a/tokyo.html
+++ b/tokyo.html
@@ -14,7 +14,7 @@
     
   <div class="animated-title">
   <div class="track">
-  <div class="content">&nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  </div>
+  <div class="content">&nbsp; ▸ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ‣ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  &nbsp; ▶︎ CLICK! Theme song : Yogee New Waves - Climax Night  *Please open in browser(੭ˊ꒳ˋ)੭  </div>
   </div>
   </div>
         
