--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="thum1">
                 <ul class="clearfix">
                         <li>
-                        <a href=" " target="_blank" onfocus="this.blur()">
+                        <a href="document.tokyo.html" target="_blank" onfocus="this.blur()">
                         <img src="document.png" alt="???">
                         </a>    
                         </li>
@@ -210,7 +210,7 @@
             <div class="thum2">
                 <ul class="clearfix">
                         <li>
-                        <a href=" " target="_blank" onfocus="this.blur()">
+                        <a href="document.hk.html" target="_blank" onfocus="this.blur()">
                         <img src="document.png" alt="???">
                         </a>    
                         </li>
@@ -220,7 +220,7 @@
             <div class="thum3">
                 <ul class="clearfix">
                         <li>
-                        <a href=" " target="_blank" onfocus="this.blur()">
+                        <a href="document.ny.html" target="_blank" onfocus="this.blur()">
                         <img src="document.png" alt="???">
                         </a>    
                         </li>
