--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <!-- //newyork -->
                 
-                <div class="imgli6">
+                <div class="IMG_0868.jpeg">
                    <ul class="clearfix">
                         <li>
                         <a href="london.html" target="_blank" onfocus="this.blur()">
