--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                 </div>
                 <!-- //newyork -->
                 
-                <div class="IMG_0868.jpeg">
+                <div class="imgli6">
                    <ul class="clearfix">
                         <li>
                         <a href="london.html" target="_blank" onfocus="this.blur()">
-                        <img src="what.png" alt="???">
+                        <img src="IMG_0868.jpeg" alt="???">
                         <span>Christmas in London</span>
                         </a>
                         <P>#12, 2022</P>
