--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="thum2">
                 <ul class="clearfix">
                         <li>
-                        <a href="document.tokyo.html" target="_blank" onfocus="this.blur()">
+                        <a href="???" target="_blank" onfocus="this.blur()">
                         <img src="j3.JPG" alt="???">
                         </a>    
                         </li>
@@ -227,7 +227,7 @@
             <div class="thum2">
                 <ul class="clearfix">
                         <li>
-                        <a href="document.tokyo.html" target="_blank" onfocus="this.blur()">
+                        <a href="???" target="_blank" onfocus="this.blur()">
                         <img src="j3.JPG" alt="???">
                         </a>    
                         </li>
@@ -241,7 +241,7 @@
             <div class="thum2">
                 <ul class="clearfix">
                         <li>
-                        <a href="document.tokyo.html" target="_blank" onfocus="this.blur()">
+                        <a href="???" target="_blank" onfocus="this.blur()">
                         <img src="j3.JPG" alt="???">
                         </a>    
                         </li>
