--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <ul class="clearfix">
                         <li>
                         <a href="document.tokyo.html" target="_blank" onfocus="this.blur()">
-                        <img src="j3.JPG" alt="???">
+                        <img src="jp1.JPG" alt="???">
                         </a>    
                         </li>
                         <li>
@@ -214,7 +214,7 @@
                 <ul class="clearfix">
                         <li>
                         <a href="???" target="_blank" onfocus="this.blur()">
-                        <img src="j3.JPG" alt="???">
+                        <img src="h2.JPG" alt="???">
                         </a>    
                         </li>
                         <li>
@@ -228,7 +228,7 @@
                 <ul class="clearfix">
                         <li>
                         <a href="???" target="_blank" onfocus="this.blur()">
-                        <img src="j3.JPG" alt="???">
+                        <img src="n15.JPG" alt="???">
                         </a>    
                         </li>
                         <li>
@@ -242,7 +242,7 @@
                 <ul class="clearfix">
                         <li>
                         <a href="???" target="_blank" onfocus="this.blur()">
-                        <img src="j3.JPG" alt="???">
+                        <img src="L2.JPG" alt="???">
                         </a>    
                         </li>
                         <li>
