--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <ul class="clearfix">
                         <li>
                         <a href="???" target="_blank" onfocus="this.blur()">
-                        <img src="L2.JPG" alt="???">
+                        <img src="l2.JPG" alt="???">
                         </a>    
                         </li>
                         <li>
