--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="thum1">
                 <ul class="clearfix">
                         <li>
-                        <a href="???" target="_blank" onfocus="this.blur()">
+                        <a href="document.hk.html" target="_blank" onfocus="this.blur()">
                         <img src="h2.JPG" alt="???">
                         </a>    
                         </li>
