--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                         <li>
                         <a href="???" target=" " onfocus="this.blur()">
                         <img src="what.png" alt="???">
-                        <span>???</span>
+                        <span>Tokyo again🌸</span>
                         </a>
-                        <P>#??, ????</P>
+                        <P>#03, 2023</P>
                         </li>
                     </ul>
                 </div>
