--- a/document.hk.html
+++ b/document.hk.html
@@ -2,7 +2,7 @@
 <!doctypehtml>
 <html>
 <head>
-    <title>Document.tokyo</title>
+    <title>Document.hk</title>
     <meta charset="utf-8">
 
     <!-- style -->
