--- a/document.tokyo.html
+++ b/document.tokyo.html
@@ -2,7 +2,7 @@
 <!doctypehtml>
 <html>
 <head>
-    <title>Document.tokyo</title>
+    <title>tokyo2019.07</title>
     <meta charset="utf-8">
 
     <!-- style -->
