--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="imgli5">
                    <ul class="clearfix">
                         <li>
-                        <a href="???" target=" " onfocus="this.blur()">
+                        <a href="tokyoagain.html" target="_blank" onfocus="this.blur()">
                         <img src="t_a_11.jpeg" alt="???">
                         <span>Tokyo again🌸</span>
                         </a>
