--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="thum1">
                 <ul class="clearfix">
                         <li>
-                        <a href="???" target="_blank" onfocus="this.blur()">
+                        <a href="document.ny.html" target="_blank" onfocus="this.blur()">
                         <img src="n15.JPG" alt="???">
                         </a>    
                         </li>
