--- a/index.html
+++ b/index.html
@@ -267,7 +267,21 @@
                         <h2>22.</h2>       
                         </li>
                     </ul>
-            </div>  
+            </div>
+            <div class="thum1">
+                <ul class="clearfix">
+                        <li>
+                        <a href="???" target="_blank" onfocus="this.blur()">
+                        <img src="t1.JPG" alt="???">
+                        </a>    
+                        </li>
+                        <li>
+                        <h3>TOKYO</h3>
+                        <span><p>Canon EOS M50</p></span>
+                        <h2>23.</h2>       
+                        </li>
+                    </ul>
+            </div>                   
                 
                     
             </section>
