--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="thum1">
                 <ul class="clearfix">
                         <li>
-                        <a href="???" target="_blank" onfocus="this.blur()">
+                        <a href="document.london.html" target="_blank" onfocus="this.blur()">
                         <img src="l2.JPG" alt="???">
                         </a>    
                         </li>
