--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                <div class="imgli3">
                    <ul class="clearfix">
                         <li>
-                        <a href="hong kong-macao.html" target="_blank" onfocus="this.blur()">
-                        <img src="hk.jpg" alt="Hong kong - Macao">
-                        <span>Hong kong - Macao</span>
+                        <a href="hongkongmacau.html" target="_blank" onfocus="this.blur()">
+                        <img src="hk.jpg" alt="Hong kong - Macau">
+                        <span>Hong kong - Macau</span>
                         </a>
                         <P>#07, 2019</P>
                         </li>
