--- a/osaka.html
+++ b/osaka.html
@@ -20,7 +20,7 @@
         
 <div class="audio">
 <audio controls loop controls="nodownload">
-<source src="https://docs.google.com/uc?export=open&id=1gQRrNxeD5PlpDicC994oLHk6VnXBSGHN" type='audio/mp3' />
+<source src="https://drive.google.com/file/d/1gQRrNxeD5PlpDicC994oLHk6VnXBSGHN/view?usp=sharing" type='audio/mp3' />
 </audio>
 </div>
         
