--- a/osaka.html
+++ b/osaka.html
@@ -20,7 +20,7 @@
         
 <div class="audio">
 <audio controls loop controls="nodownload">
-<source src="https://drive.google.com/file/d/1gQRrNxeD5PlpDicC994oLHk6VnXBSGHN/view?usp=sharing" type='audio/mp3' />
+<source src="https://drive.google.com/file/d/1ONw5u6Kls2MHjNSJ8JnQRIdJk-jAWz5j/view?usp=sharing" type='audio/mp3' />
 </audio>
 </div>
         
@@ -46,7 +46,7 @@
         <div class="img">
             <ul class="clearfix">
             <li>
-            <img src="img-1.jpeg" alt="Summer x2 Osaka">
+            <img src="travel/18osaka/img-1.jpeg" alt="Summer x2 Osaka">
             <span>오사카 입성 후 첫 사진</span>
             </li>
             </ul>
