--- a/osaka.html
+++ b/osaka.html
@@ -54,7 +54,7 @@
         <div class="img1">
             <ul class="clearfix">
              <li>
-             <img src="img-2.jpeg" alt="Summer x2 Osaka">
+             <img src="travel/18osaka/img-2.jpeg" alt="Summer x2 Osaka">
              <span> </span>
              </li>
             </ul>
