--- a/osaka.html
+++ b/osaka.html
@@ -64,7 +64,7 @@
         <div class="img2">
             <ul class="clearfix">
             <li>
-            <img src="img-3.jpeg" alt="Summer x2 Osaka">
+            <img src="travel/18osaka/img-3.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -72,7 +72,7 @@
         <div class="img3">
             <ul class="clearfix">
              <li>
-             <img src="img-4.jpeg" alt="Summer x2 Osaka">
+             <img src="travel/18osaka/img-4.jpeg" alt="Summer x2 Osaka">
              <p>📍Kansai International Airport</p>
              <span>공항 열차타고 라피트 타러 가는 길. </span>
              </li>
@@ -81,7 +81,7 @@
         <div class="img4">
             <ul class="clearfix">
             <li>
-            <img src="img-6.jpeg" alt="Summer x2 Osaka">
+            <img src="travel/18osaka/img-6.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -89,7 +89,7 @@
         <div class="img5">
             <ul class="clearfix">
             <li>
-            <img src="img-7.jpeg" alt="Summer x2 Osaka">
+            <img src="travel/18osaka/img-7.jpeg" alt="Summer x2 Osaka">
             <span> </span>
             </li>
             </ul>
@@ -97,7 +97,7 @@
         <div class="img6">
             <ul class="clearfix">
             <li>
-            <img src="img-8.jpeg" alt="Summer x2 Osaka">
+            <img src="travel/18osaka/img-8.jpeg" alt="Summer x2 Osaka">
             <span>공항 편의점에서 갑자기 모찌를 사먹고는</span>
             </li>
             </ul>
