--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href=".html" target="_blank" onfocus="this.blur()">
-                        <img src="23nagoya.jpeg" alt="23nagoya">
+                        <img src="travel/23nagoya/23nagoya.jpeg" alt="23nagoya">
                         <span>NAGOYA</span>
                         </a>
                         <P>#10, 2023</P>
@@ -219,7 +219,7 @@
                    <ul class="clearfix">
                         <li>
                         <a href=".html" target="_blank" onfocus="this.blur()">
-                        <img src="25kobe.jpeg" alt="25kobe">
+                        <img src="travel/25kobe/25kobe.jpeg" alt="25kobe">
                         <span>Haru no KOBE</span>
                         </a>
                         <P>#03, 2025</P>
