--- a/osaka.html
+++ b/osaka.html
@@ -19,11 +19,10 @@
   </div>
 
 <div class="audio">
-  <audio controls loop>
-    <source src="travel/18osaka/『パンとスープとネコ日和 』二人でお酒・金子隆博.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-  </audio>
-</div>
+<audio controls loop controls="nodownload">
+<source src="travel/18osaka/『パンとスープとネコ日和 』二人でお酒・金子隆博.mp3" type="audio/mp3">
+</audio>
+</div>        
         
         
     <section id="number">
