--- a/osaka.html
+++ b/osaka.html
@@ -104,7 +104,7 @@
         <div class="img7">
             <ul class="clearfix">
             <li>
-            <img src="img-9.jpeg" alt="Summer x2 Osaka">
+            <img src="travel/18osaka/img-9.jpeg" alt="Summer x2 Osaka">
             <span>오사카 스퀴즈를 지나</span>
             </li>
             </ul>
