--- a/osaka.html
+++ b/osaka.html
@@ -20,7 +20,7 @@
 
 <div class="audio">
 <audio controls loop controls="nodownload">
-<source src="travel/18osaka/『パンとスープとネコ日和 』二人でお酒・金子隆博.mp3" type="audio/mp3">
+<source src="travel/18osaka/『パンとスープとネコ日和 』二人でお酒・金子隆博.mp3" type="audio/mp3">
 </audio>
 </div>        
         
