--- a/osaka.html
+++ b/osaka.html
@@ -18,11 +18,12 @@
   </div>
   </div>
 
-<div class="audio">
-<audio controls loop controls="nodownload">
-<source src="travel/18osaka/『パンとスープとネコ日和 』二人でお酒・金子隆博.mp3" type="audio/mp3">
-</audio>
-</div>        
+    <div class="audio">
+    <audio controls loop controls="nodownload">
+    <source src=“https://Hayeoncom.github.io/music-project/travel/18osaka/パンとスープとネコ日和.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+    </audio>
+</div>      
         
         
     <section id="number">
