--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <li>
                         <a href=".html" target="_blank" onfocus="this.blur()">
                         <img src="23nagoya.jpeg" alt="23nagoya">
-                        <span>NAGOYA</span>
+                        <span>NA-GO-YA🎡</span>
                         </a>
                         <P>#10, 2023</P>
                         </li>
@@ -244,9 +244,11 @@
                         </a>    
                         </li>
                         <li>
+                        <a href="document.tokyo.html" target="_blank" onfocus="this.blur()">  
                         <h3>TOKYO</h3>
                         <span><p>Canon EOS M50</p></span>
-                        <h2>19.</h2>
+                        <h2>07,2019</h2>
+                         </a>     
                         </li>
                     </ul>
             </div>
@@ -258,9 +260,11 @@
                         </a>    
                         </li>
                         <li>
+                        <a href="document.hk.html" target="_blank" onfocus="this.blur()">   
                         <h3>HONG KONG</h3>
                         <span><p>Canon EOS M50</p></span>
-                        <h2>19.</h2>       
+                        <h2>07,2019</h2> 
+                        </a>         
                         </li>
                     </ul>
             </div>
@@ -273,9 +277,11 @@
                         </a>    
                         </li>
                         <li>
+                        <a href="document.ny.html" target="_blank" onfocus="this.blur()">  
                         <h3>NEW YORK</h3>
                         <span><p>Canon EOS M50</p></span>
-                        <h2>20.</h2>      
+                        <h2>02,2020</h2>   
+                         </a>     
                         </li>
                     </ul>
             </div>
@@ -288,9 +294,11 @@
                         </a>    
                         </li>
                         <li>
-                        <h3>LONDON</h3>
+                        <a href="document.london.html" target="_blank" onfocus="this.blur()">
+                        <h3 class="h3l">LONDON</h3>
                         <span><p>Canon EOS M50</p></span>
-                        <h2>22.</h2>       
+                        <h2>12,2022</h2>   
+                         </a>     
                         </li>
                     </ul>
             </div>
@@ -302,12 +310,14 @@
                         </a>    
                         </li>
                         <li>
+                        <a href="???" target="_blank" onfocus="this.blur()">    
                         <h3>TOKYO</h3>
                         <span><p>Canon EOS M50</p></span>
-                        <h2>23.</h2>       
+                        <h2>03,2023</h2> 
+                        </a>    
                         </li>
                     </ul>
-            </div>                   
+            </div>                       
                 
                     
             </section>
