--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="imgli6">
                    <ul class="clearfix">
                         <li>
-                        <a href=".html" target="_blank" onfocus="this.blur()">
+                        <a href="tokyoagain.html" target="_blank" onfocus="this.blur()">
                         <img src="23nagoya.jpeg" alt="23nagoya">
                         <span>NA-GO-YA🎡</span>
                         </a>
@@ -218,7 +218,7 @@
                 <div class="imgli5">
                    <ul class="clearfix">
                         <li>
-                        <a href=".html" target="_blank" onfocus="this.blur()">
+                        <a href="tokyoagain.html" target="_blank" onfocus="this.blur()">
                         <img src="25kobe.jpeg" alt="25kobe">
                         <span>Haru no KOBE</span>
                         </a>
